--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="navbar">
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="app/menu.html" class="nav-link">Menu</a>
-                <a href="app/orders.html" class="nav-link">Orders</a>
+                <a href="app/place-order.html" class="nav-link">Place Orders</a>
                 <a href="app/reports.html" class="nav-link">Reports</a>
                 <a href="#" class="nav-link"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16"><path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/></svg></i></a>
             </nav>
@@ -32,7 +32,7 @@
      <div class="container">
         <div class="row align-items-center g-5 py-5 border-1">
             <div class="col-lg-6 col-md-12 col-sm-12 text-center hero-image">
-              <img src="assets/images/hero-Image.png" class="hero-imgd-block mx-lg-auto img-fluid " alt="Hero Image">
+              <img src="assets/home-img.png" class="hero-imgd-block mx-lg-auto img-fluid " alt="Hero Image">
             </div>
             <div class="col-lg-6">
               <h2 class="display-5 fw-bolder text-body-emphasis lh-1 mb-5">Welcome to MOS Burgers!</h2>
@@ -40,8 +40,8 @@
               <div class="d-grid gap-3 btn-group-vertical">
                 <button type="button" class="btn btn-outline-warning btn-lg px-5 me-md-2 pb-2 mb-2 btn-custom fw-semibold" onclick="window.location.href='app/place-order.html'">Place Order</button>
                 <button type="button" class="btn btn-outline-warning btn-lg px-5 btn-custom fw-semibold" onclick="window.location.href='app/menu.html'">Menu Management</button>
-                <button type="button" class="btn btn-outline-warning btn-lg px-5 btn-custom fw-semibold" onclick="window.location.href='app/orders.html'">Order History</button>
-                <button type="button" class="btn btn-outline-warning btn-lg px-5 btn-custom fw-semibold" onclick="window.location.href='app/customer.html'">Customer List</button>
+                <button type="button" class="btn btn-outline-warning btn-lg px-5 btn-custom fw-semibold" onclick="window.location.href='app/orders.html'">Order's History</button>
+                <button type="button" class="btn btn-outline-warning btn-lg px-5 btn-custom fw-semibold" onclick="window.location.href='app/customer.html'">Customer's List</button>
                 <button type="button" class="btn btn-outline-warning btn-lg px-5 btn-custom fw-semibold" onclick="window.location.href='app/reports.html'">Reports</button>
               </div>
             </div>
