--- a/app/customer.html
+++ b/app/customer.html
@@ -25,7 +25,7 @@
             <nav class="navbar navbar-expand-lg">
                 <a href="../index.html" class="nav-link">Home</a>
                 <a href="menu.html" class="nav-link">Menu</a>
-                <a href="orders.html" class="nav-link">Orders</a>
+                <a href="place-order.html" class="nav-link">Place Orders</a>
                 <a href="reports.html" class="nav-link">Reports</a>
                 <a href="#" class="nav-link"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
