--- a/app/menu.html
+++ b/app/menu.html
@@ -28,7 +28,7 @@
             <nav class="navbar">
                 <a href="../index.html" class="nav-link">Home</a>
                 <a href="menu.html" class="nav-link active">Menu</a>
-                <a href="orders.html" class="nav-link">Orders</a>
+                <a href="place-order.html" class="nav-link">Place Orders</a>
                 <a href="reports.html" class="nav-link">Reports</a>
                 <a href="#" class="nav-link"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
@@ -208,76 +208,6 @@
 
 
             </div>
-            <!-- <div class="table-responsive">
-                <table class="table table-striped" id="tblMenu">
-                    <thead>
-                        <tr>
-                            <th><input type="checkbox"></th>
-                            <th>Item Code</th>
-                            <th >Product Name</th>
-                            <th>Category</th>
-                            <th>Price LKR</th>
-                            <th>Discount %</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><input type="checkbox"></td>
-                            <td>B1001</td>
-                            <td><img src="../assets/images/Burger-Category/Classic Burger (Large).webp" alt="Product Image" class="product-img"> Classic Chicken Burger (Large)</td>
-                            <td>Burger</td>
-                            <td>1500.00</td>
-                            <td>15</td>
-                            <td class="action-icons">
-                                <img src="../assets/icons/eye.svg" alt="" onclick="showAddMenuItemModal()">
-                                <img src="../assets/icons/edit.svg" alt="">
-                                <img src="../assets/icons/trash.svg" alt="">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><input type="checkbox"></td>
-                            <td>B1002</td>
-                            <td><img src="../assets/images/Bevarages-Category/Coca-Cola (330ml).webp" alt="Product Image" class="product-img"> Coca Cola (330ml)</td>
-                            <td>Beverages</td>
-                            <td>1230.00</td>
-                            <td>-</td>
-                            
-                            <td class="action-icons">
-                                <img src="../assets/icons/eye.svg" alt="">
-                                <img src="../assets/icons/edit.svg" alt="">
-                                <img src="../assets/icons/trash.svg" alt="">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><input type="checkbox"></td>
-                            <td>B1003</td>
-                            <td><img src="../assets/images/Pasta-Category/Chicken Cheese Pasta.jpg" alt="Product Image" class="product-img">Chicken Cheese Pasta</td>
-                            <td>Pasta</td>
-                            <td>1600.00</td>
-                            <td>12</td>
-                            <td class="action-icons">
-                                <img src="../assets/icons/eye.svg" alt="">
-                                <img src="../assets/icons/edit.svg" alt="">
-                                <img src="../assets/icons/trash.svg" alt="">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><input type="checkbox"></td>
-                            <td>B1004</td>
-                            <td><img src="../assets/images/Submarine-Category/Crispy Chicken Submarine (Large).jpg" alt="Product Image" class="product-img">Crispy Chicken Submarine (Large)</td>
-                            <td>Submarine</td>
-                            <td>2000.00</td>
-                            <td>-</td>
-                            <td class="action-icons">
-                                <img src="../assets/icons/eye.svg" alt="">
-                                <img src="../assets/icons/edit.svg" alt="">
-                                <img src="../assets/icons/trash.svg" alt="">
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div> -->
 
             <div class="row p-2 pt-0">
                 <!-- Left Panel -->
