--- a/app/reports.html
+++ b/app/reports.html
@@ -20,7 +20,7 @@
             <nav class="navbar">
                 <a href="../index.html" class="nav-link">Home</a>
                 <a href="menu.html" class="nav-link">Menu</a>
-                <a href="orders.html" class="nav-link">Orders</a>
+                <a href="place-order.html" class="nav-link">Place Orders</a>
                 <a href="reports.html" class="nav-link active">Reports</a>
                 <a href="#" class="nav-link"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16"><path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/></svg></i></a>
             </nav>
