--- a/app/menu.html
+++ b/app/menu.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body class="bg-black">
     <!-- Navigation -->
     <div class="container ">
         <header class="header d-flex flex-wrap justify-content-center py-3 mb-4 mt-3">
@@ -195,7 +195,7 @@
         <div class="container mt-1">
             <div class="row d-flex justify-content-between align-items-center mb-3">
                 <div class="col-lg-3 col-md-12 col-sm-12">
-                    <h2 class="fw-bold display-7 m-3">Product List</h2>
+                    <h2 class="fw-bold display-7 m-3 text-white">Product List</h2>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 mb-sm-3 text-center">
                     <input type="text" id="search-bar" placeholder="Search products..." oninput="searchProducts()" />
@@ -213,30 +213,30 @@
                 <!-- Left Panel -->
                 <div class="col-lg-2 col-md-2 col-sm-2">
                     <div class="d-flex flex-wrap mb-3 justify-content-around" id="category-list">
-                        <div class="category-card me-2 mb-2" id="burgers">
+                        <div class="category-card me-2 mb-2  bg-white" id="burgers">
                             <img src="../assets/images/burger.png" alt="">
                             <p>Burgers</p>
                         </div>
-                        <div class="category-card me-2 mb-2" id="pasta">
+                        <div class="category-card me-2 mb-2  bg-white" id="pasta">
                             <img src="../assets/images/Pasta-Category/categoryImage.png" alt="">
-                            <p>Pasta</p>
+                            <p >Pasta</p>
                         </div>
-                        <div class="category-card me-2 mb-2" id="submarine">
+                        <div class="category-card me-2 mb-2  bg-white" id="submarine">
                             <img src="../assets/images/Submarine-Category/Double Cheese Chicken Submarine.webp" alt="">
-                            <p>Submarine</p>
+                            <p >Submarine</p>
                         </div>
-                        <div class="category-card me-2 mb-2" id="fries">
+                        <div class="category-card me-2 mb-2  bg-white" id="fries">
                             <img src="../assets/images/Fries-Category/Sweet Potato Fries.webp" alt="">
                             <p>Fries</p>
                         </div>
-                        <div class="category-card me-2 mb-2" id="chicken">
+                        <div class="category-card me-2 mb-2  bg-white" id="chicken">
                             <img src="../assets/images/Chicken-Category/Fried Chicken large.webp" alt="">
-                            <p>Chicken</p>
+                            <p >Chicken</p>
                         </div>
 
-                        <div class="category-card me-2 mb-2" id="beverages">
+                        <div class="category-card me-2 mb-2  bg-white" id="beverages">
                             <img src="../assets/images/Bevarages-Category/Beverahes-category.webp" alt="">
-                            <p>Beverages</p>
+                            <p >Beverages</p>
                         </div>
 
                     </div>
