--- a/app/place-order.html
+++ b/app/place-order.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
 </head>
 
-<body>
+<body class="bg-black">
 
     <!-- Navigation -->
     <div class="container ">
@@ -322,35 +322,35 @@
 
             <div class="col-lg-7 col-md-12 col-sm-12">
                 <div class="row">
-                    <h2 class="col-lg-6 col-md-12 col-sm-12 fw-semibold mb-3">Categories</h2>
+                    <h2 class="col-lg-6 col-md-12 col-sm-12 fw-semibold mb-3 text-white">Categories</h2>
                     <div class="col-lg-6 col-md-12 col-sm-12 mb-sm-3 text-center">
                         <input type="text" id="search-bar" placeholder="Search products..." oninput="searchProducts()" />
                     </div>
                 </div>
 
                 <div class="d-flex flex-wrap mb-3 justify-content-around" id="category-list">
-                    <div class="category-card me-2 mb-2" id="burgers">
+                    <div class="category-card me-2 mb-2 bg-white" id="burgers">
                         <img src="../assets/images/burger.png" alt="Burgers">
                         <p>Burgers</p>
                     </div>
-                    <div class="category-card me-2 mb-2" id="pasta">
+                    <div class="category-card me-2 mb-2  bg-white" id="pasta">
                         <img src="../assets/images/Pasta-Category/categoryImage.png" alt="Pasta">
                         <p>Pasta</p>
                     </div>
-                    <div class="category-card me-2 mb-2" id="submarine">
+                    <div class="category-card me-2 mb-2  bg-white" id="submarine">
                         <img src="../assets/images/Submarine-Category/Double Cheese Chicken Submarine.webp" alt="">
-                        <p>Submarine</p>
+                        <p >Submarine</p>
                     </div>
-                    <div class="category-card me-2 mb-2" id="fries">
+                    <div class="category-card me-2 mb-2  bg-white" id="fries">
                         <img src="../assets/images/Fries-Category/Sweet Potato Fries.webp" alt="">
-                        <p>Fries</p>
+                        <p >Fries</p>
                     </div>
-                    <div class="category-card me-2 mb-2" id="chicken">
+                    <div class="category-card me-2 mb-2  bg-white" id="chicken">
                         <img src="../assets/images/Chicken-Category/Fried Chicken large.webp" alt="">
                         <p>Chicken</p>
                     </div>
 
-                    <div class="category-card me-2 mb-2" id="beverages">
+                    <div class="category-card me-2 mb-2  bg-white" id="beverages">
                         <img src="../assets/images/Bevarages-Category/Beverahes-category.webp" alt="">
                         <p>Beverages</p>
                     </div>
