--- a/app/customer.html
+++ b/app/customer.html
@@ -14,7 +14,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-<body>
+<body class="bg-black">
     <!-- Navigation -->
     <div class="container ">
         <header class="header d-flex flex-wrap justify-content-center py-3 mb-4 mt-3">
@@ -199,7 +199,7 @@
         <div class="container mt-1">
             <div class="row d-flex justify-content-between align-items-center mb-3">
                 <div class="col-lg-3 col-md-12 col-sm-12">
-                    <h2 class="fw-bold display-7 m-3">Customer List</h2>
+                    <h2 class="fw-bold display-7 m-3 text-white">Customer List</h2>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 mb-sm-3 text-center">
                     <input type="text" id="search-bar" placeholder="Search Customer..." />
