--- a/app/orders.html
+++ b/app/orders.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<body class="bg-black">
 
     <!-- Navigation -->
     <div class="container ">
@@ -83,9 +83,9 @@
         <div class="container">
             <main class="table" id="customers_table">
                 <section class="table-header d-flex justify-content-between align-items-center">
-                    <h2 class="fw-bold display-7 m-3">Order History</h2>
+                    <h2 class="fw-bold display-7 m-3 text-white">Order History</h2>
                     <div class="input-group">
-                        <input type="search" placeholder="Search Order..." id="search-bar" class=" p-3 fw-medium">
+                        <input type="search" placeholder="Search Order..." id="search-bar" class=" p-3 fw-medium text-white">
                         <!-- <img src="/assets/images/search.png" alt=""> -->
                     </div>
                     <div class="export__file m-5">
