--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body>
+<body class="bg-black">
     
     <!-- Navigation -->
     <div class="container ">
@@ -35,7 +35,7 @@
               <img src="assets/home-img.png" class="hero-imgd-block mx-lg-auto img-fluid " alt="Hero Image">
             </div>
             <div class="col-lg-6">
-              <h2 class="display-5 fw-bolder text-body-emphasis lh-1 mb-5">Welcome to MOS Burgers!</h2>
+              <h2 class="display-5 fw-bolder lh-1 mb-5 text-white">Welcome to MOS Burgers!</h2>
               <!-- <p class="lead">Experience the perfect burger crafted with fresh ingredients and delicious recipes. From classic favorites to gourmet creations, each bite is a taste of heaven!</p> -->
               <div class="d-grid gap-3 btn-group-vertical">
                 <button type="button" class="btn btn-outline-warning btn-lg px-5 me-md-2 pb-2 mb-2 btn-custom fw-semibold" onclick="window.location.href='app/place-order.html'">Place Order</button>
